# sentinel-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/sentinel-api/: Cargo.toml
crates/sentinel-api/.sqlx/: query-21cd66c6a325f34158e5fc07df0945d3d190aecb628d7ba0eb02f20370412ada.json  query-52eaf8e484f5f5d41e3003ee1b9fdce0c761d49d617ee8254ef7c0b89ca5a0a1.json  query-6f946bf69c53c2b8ee9aeed192d6f8302875584561ad1031da0280eae4f4cede.json  query-78636fc2a800efa7264d4bd0b53bf714ba43cbf5b40524d4ddc518127dd764aa.json  query-79bbec635eb4a082da1a2a9153dd4621f2a888407501871296017d1fc15f1589.json  query-8dde44e428b6a220b345dd31d3e7ef3e9caf3c1cf688480ea9a345b6d278a8b0.json  query-9fdcbea633dfd22e83953ec6ee0227decbb5e97f052ea48b51c5b2f12bbf7b0b.json  query-bbbe9c9b496f329169d6153bb0b088e81b81d39c8f456c81d9991d0349d644e9.json  query-d233f3098112de32e8c51c72cfd3d8b5d4eeb5aeb47895e184033ead2a5ff2fe.json  query-e5905ce9e44ddf877bc85d9b64d3fdfc7d10f45f367e61bbe6061aba2685b1da.json
crates/sentinel-api/migrations/: 0001_init.sql
crates/sentinel-api/src/: db.rs  error.rs  main.rs  state.rs  worker.rs
crates/sentinel-api/src/routes/: coverage.rs  findings.rs  mod.rs  runs.rs
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/src/: config.rs  finding.rs  lib.rs  run.rs
crates/sentinel-fuzzer/: Cargo.toml
crates/sentinel-fuzzer/src/: corpus.rs  coverage.rs  lib.rs  runner.rs
crates/sentinel-harness-gen/: Cargo.toml
crates/sentinel-harness-gen/src/: lib.rs
crates/sentinel-verifier/: Cargo.toml
crates/sentinel-verifier/src/: engine.rs  invariants.rs  lib.rs
