[package]
name = "sentinel-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-harness-gen = { path = "../sentinel-harness-gen" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
